--- a/package.json
+++ b/package.json
@@ -9,7 +9,19 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "nanoid": "^3.3.4",
+    "react-animations": "^1.0.0",
+    "react-bootstrap": "^2.3.1",
+    "react-datepicker": "^4.8.0",
+    "react-hook-form": "^7.30.0",
+    "react-icons": "^4.3.1",
+    "react-responsive": "^9.0.0-beta.8",
+    "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.0.1",
+    "sass": "^1.51.0"
   },
   "scripts": {
     "start": "react-scripts start",
