--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "nanoid": "^3.3.4",
+    "react": "^18.1.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.3.1",
     "react-datepicker": "^4.8.0",
+    "react-dom": "^18.1.0",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.8",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
