--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-input-mask": "^2.0.4",
+    "react-paginate": "^8.1.3",
     "react-responsive": "^9.0.0-beta.8",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
